--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,11 +6,15 @@
     }
   },
   "FeatureFlags": {
-    "UseMongoDb": true
+    "UseMongoDb": true,
+    "UseAzureStorage": false
   },
   "MongoDb": {
     "ConnectionString": "mongodb://root:example@localhost:27017",
     "DatabaseName": "cloudsoft",
     "SubscribersCollectionName": "subscribers"
+  },
+  "AzureBlob": {
+    "ContainerUrl": "https://localhost:7240/images"
   }
 }
