--- a/appsettings.json
+++ b/appsettings.json
@@ -7,11 +7,15 @@
   },
   "AllowedHosts": "*",
   "FeatureFlags": {
-    "UseMongoDb": false
+    "UseMongoDb": false,
+    "UseAzureStorage": false
   },
   "MongoDb": {
     "ConnectionString": "mongodb://{username}:{password}@{hostname}:{port}",
     "DatabaseName": "cloudsoft",
     "SubscribersCollectionName": "subscribers"
+  },
+  "AzureBlob": {
+    "ContainerUrl": "https://{accountname}.blob.core.windows.net/{container}"
   }
 }
