Fix: Changed target framework to .NET 8.0

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "FeatureFlags": {
     "UseMongoDb": false,
-    "UseAzureStorage": false
+    "UseAzureStorage": true
   },
   "MongoDb": {
     "ConnectionString": "mongodb://{username}:{password}@{hostname}:{port}",
@@ -16,6 +16,6 @@
     "SubscribersCollectionName": "subscribers"
   },
   "AzureBlob": {
-    "ContainerUrl": "https://{accountname}.blob.core.windows.net/{container}"
+    "ContainerUrl": "https://norstoragetest.blob.core.windows.net/images"
   }
 }
