--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "FeatureFlags": {
-    "UseMongoDb": true,
-    "UseAzureStorage": false
+    "UseMongoDb": false,
+    "UseAzureStorage": true
   },
   "MongoDb": {
     "ConnectionString": "mongodb://root:example@localhost:27017",
